# binning_process

./: README.md  compare_report_test.html  compare_report_valid_test.html  main.py  pyproject.toml
binning_process/: __init__.py  compare.py  merge_process.py  monotonic_binning.py  report.py  report_viz.py
binning_process/categorical/: __init__.py  base.py  chimerge.py  decision_tree.py  woe_adjacent.py
binning_process/core/: base.py  merge_process.py  utils.py  values.py
binning_process/numerical/: __init__.py  base.py  merge_process.py
binning_process/numerical/supervised/: __init__.py  chimerge.py  decision_tree.py  isotonic.py  ks_optimal.py  mdlp.py  scorecard.py  spearman.py
binning_process/numerical/unsupervised/: __init__.py  equal_width.py  jenks.py  kmeanbin.py  quantile.py
binning_process/supervised/: __init__.py  chimerge.py  decision_tree.py  decission_tree.py  isotoic.py  isotonic.py  ks_optimal.py  mdlp.py  quantile.py  scorecard.py  spearman.py
binning_process/unsupervised/: __init__.py  equal_width.py  jenks.py
docs/: Isotonic_Regression_Binning.pptx  build_isotonic_ppt.py  slides_isotonic.md
examples/: example.ipynb  how_to_work.ipynb
notebooks/: example.ipynb
tests/: __init__.py  test_compare.py  test_report.py  test_utils.py
