[project]
name = "binning-process"
version = "0.1.0"
description = "Monotonic WOE Binning for scorecard and logistic regression."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py310"
select = ["E", "F", "I", "W"]
ignore = ["E501"]
